--- a/public/style.css
+++ b/public/style.css
@@ -586,8 +586,17 @@ video {
   right: 0px;
 }
 
+.col-span-6 {
+  grid-column: span 6 / span 6;
+}
+
 .m-auto {
   margin: auto;
+}
+
+.mx-\[70px\] {
+  margin-left: 70px;
+  margin-right: 70px;
 }
 
 .mx-auto {
@@ -668,6 +677,10 @@ video {
   display: none;
 }
 
+.aspect-square {
+  aspect-ratio: 1 / 1;
+}
+
 .h-\[120px\] {
   height: 120px;
 }
@@ -688,12 +701,32 @@ video {
   height: 57px;
 }
 
+.h-\[77px\] {
+  height: 77px;
+}
+
 .h-\[78px\] {
   height: 78px;
 }
 
 .h-\[97px\] {
   height: 97px;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
+.h-\[684px\] {
+  height: 684px;
+}
+
+.h-10 {
+  height: 2.5rem;
 }
 
 .w-\[258px\] {
@@ -717,8 +750,20 @@ video {
   width: 100%;
 }
 
+.w-10 {
+  width: 2.5rem;
+}
+
+.max-w-\[77px\] {
+  max-width: 77px;
+}
+
 .cursor-pointer {
   cursor: pointer;
+}
+
+.grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -727,6 +772,10 @@ video {
 
 .place-content-center {
   place-content: center;
+}
+
+.place-items-center {
+  place-items: center;
 }
 
 .items-center {
@@ -757,9 +806,49 @@ video {
   gap: 9px;
 }
 
+.gap-\[20px\] {
+  gap: 20px;
+}
+
+.gap-\[13px\] {
+  gap: 13px;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
 .gap-x-3\.5 {
   -moz-column-gap: 0.875rem;
        column-gap: 0.875rem;
+}
+
+.space-y-\[27px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(27px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(27px * var(--tw-space-y-reverse));
+}
+
+.space-y-\[34px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(34px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(34px * var(--tw-space-y-reverse));
+}
+
+.space-y-\[43px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(43px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(43px * var(--tw-space-y-reverse));
+}
+
+.space-y-\[84px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(84px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(84px * var(--tw-space-y-reverse));
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .rounded-3xl {
@@ -770,8 +859,16 @@ video {
   border-radius: 118px;
 }
 
+.rounded-\[20px\] {
+  border-radius: 20px;
+}
+
 .rounded-sm {
   border-radius: 0.125rem;
+}
+
+.rounded-\[10px\] {
+  border-radius: 10px;
 }
 
 .border {
@@ -781,6 +878,26 @@ video {
 .border-primary {
   --tw-border-opacity: 1;
   border-color: rgb(26 61 100 / var(--tw-border-opacity, 1));
+}
+
+.bg-\[\#57BA76\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(87 186 118 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#986BD0\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(152 107 208 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#DF447B\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(223 68 123 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#DFC844\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(223 200 68 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[\#DFF1FD\] {
@@ -808,9 +925,31 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-slate-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity, 1));
+}
+
+.p-10 {
+  padding: 2.5rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-5 {
@@ -828,9 +967,24 @@ video {
   padding-right: 2rem;
 }
 
+.px-\[22px\] {
+  padding-left: 22px;
+  padding-right: 22px;
+}
+
 .px-\[98px\] {
   padding-left: 98px;
   padding-right: 98px;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-2\.5 {
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
 }
 
 .py-\[11px\] {
@@ -841,6 +995,31 @@ video {
 .py-\[15px\] {
   padding-top: 15px;
   padding-bottom: 15px;
+}
+
+.py-\[9px\] {
+  padding-top: 9px;
+  padding-bottom: 9px;
+}
+
+.px-\[\] {
+  padding-left: ;
+  padding-right: ;
+}
+
+.px-\[70px\] {
+  padding-left: 70px;
+  padding-right: 70px;
+}
+
+.py-\[\] {
+  padding-top: ;
+  padding-bottom: ;
+}
+
+.py-\[80px\] {
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
 
 .pb-\[52px\] {
@@ -869,6 +1048,14 @@ video {
 
 .font-sans {
   font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.text-\[12px\] {
+  font-size: 12px;
+}
+
+.text-\[24px\] {
+  font-size: 24px;
 }
 
 .font-bold {
@@ -905,6 +1092,11 @@ video {
 
 .drop-shadow-\[0_4px_4px_rgba\(0\2c 0\2c 0\2c 0\.25\)\] {
   --tw-drop-shadow: drop-shadow(0 4px 4px rgba(0,0,0,0.25));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.drop-shadow-\[0px_4px_4px_rgba\(0\2c 0\2c 0\2c 0\.25\)\] {
+  --tw-drop-shadow: drop-shadow(0px 4px 4px rgba(0,0,0,0.25));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
