--- a/src/SASS/main.scss
+++ b/src/SASS/main.scss
@@ -10,3 +10,9 @@
 ================================ */
 @use "./mayssen/components";
 @use "./mayssen/form";
+
+
+@use "nour/variables";
+@use "nour/layout";
+@use "nour/components";
+@use "nour/pages";
