courses and stuff

--- a/src/style.css
+++ b/src/style.css
@@ -2,15 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
-
 @theme {
   --color-primary: #1a3d64;
   --color-secondary: #0c2b4e;
   --color-accent: #1d546c;
   --color-neutrallight: #f4f4f4;
   --color-neutraldark: #454545;
+  --color-neutraldefault: #d9d9d9;
 
   --font-sans: "Open Sans", sans-serif;
   --font-display: "Poppins", sans-serif;
