--- a/public/style.css
+++ b/public/style.css
@@ -544,6 +544,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.static {
+  position: static;
+}
+
 .absolute {
   position: absolute;
 }
@@ -554,6 +558,10 @@ video {
 
 .-bottom-12 {
   bottom: -3rem;
+}
+
+.-left-2 {
+  left: -0.5rem;
 }
 
 .-right-3 {
@@ -572,6 +580,10 @@ video {
   top: -66px;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -580,8 +592,20 @@ video {
   right: 0px;
 }
 
+.top-0 {
+  top: 0px;
+}
+
+.z-0 {
+  z-index: 0;
+}
+
 .col-span-1 {
   grid-column: span 1 / span 1;
+}
+
+.col-span-12 {
+  grid-column: span 12 / span 12;
 }
 
 .col-span-2 {
@@ -621,11 +645,6 @@ video {
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
-}
-
-.mx-\[22px\] {
-  margin-left: 22px;
-  margin-right: 22px;
 }
 
 .mb-1 {
@@ -744,10 +763,6 @@ video {
   margin-top: 91px;
 }
 
-.mb-\[129px\] {
-  margin-bottom: 129px;
-}
-
 .inline-block {
   display: inline-block;
 }
@@ -796,12 +811,20 @@ video {
   height: 7rem;
 }
 
+.h-3 {
+  height: 0.75rem;
+}
+
 .h-32 {
   height: 8rem;
 }
 
 .h-36 {
   height: 9rem;
+}
+
+.h-4 {
+  height: 1rem;
 }
 
 .h-6 {
@@ -836,6 +859,10 @@ video {
   height: 392px;
 }
 
+.h-\[474px\] {
+  height: 474px;
+}
+
 .h-\[57px\] {
   height: 57px;
 }
@@ -856,12 +883,17 @@ video {
   height: 97px;
 }
 
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
 .h-full {
   height: 100%;
 }
 
-.h-\[431px\] {
-  height: 431px;
+.max-h-6 {
+  max-height: 1.5rem;
 }
 
 .min-h-screen {
@@ -884,8 +916,16 @@ video {
   width: 5rem;
 }
 
+.w-4 {
+  width: 1rem;
+}
+
 .w-4\/5 {
   width: 80%;
+}
+
+.w-5 {
+  width: 1.25rem;
 }
 
 .w-6 {
@@ -898,6 +938,10 @@ video {
 
 .w-\[10px\] {
   width: 10px;
+}
+
+.w-\[142px\] {
+  width: 142px;
 }
 
 .w-\[220px\] {
@@ -918,6 +962,10 @@ video {
 
 .w-\[446px\] {
   width: 446px;
+}
+
+.w-\[55px\] {
+  width: 55px;
 }
 
 .w-fit {
@@ -947,6 +995,11 @@ video {
 
 .shrink-0 {
   flex-shrink: 0;
+}
+
+.rotate-45 {
+  --tw-rotate: 45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .transform {
@@ -1021,6 +1074,10 @@ video {
   gap: 0px;
 }
 
+.gap-11 {
+  gap: 2.75rem;
+}
+
 .gap-2 {
   gap: 0.5rem;
 }
@@ -1069,16 +1126,16 @@ video {
   gap: 27px;
 }
 
+.gap-\[36px\] {
+  gap: 36px;
+}
+
 .gap-\[75px\] {
   gap: 75px;
 }
 
 .gap-\[9px\] {
   gap: 9px;
-}
-
-.gap-11 {
-  gap: 2.75rem;
 }
 
 .gap-x-3 {
@@ -1103,10 +1160,22 @@ video {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.space-y-5 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+}
+
 .space-y-6 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+}
+
+.space-y-\[21px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(21px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(21px * var(--tw-space-y-reverse));
 }
 
 .space-y-\[34px\] > :not([hidden]) ~ :not([hidden]) {
@@ -1127,16 +1196,8 @@ video {
   margin-bottom: calc(84px * var(--tw-space-y-reverse));
 }
 
-.space-y-\[21px\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(21px * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(21px * var(--tw-space-y-reverse));
-}
-
-.space-y-5 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .overflow-x-auto {
@@ -1187,6 +1248,11 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-b-full {
+  border-bottom-right-radius: 9999px;
+  border-bottom-left-radius: 9999px;
+}
+
 .rounded-t-2xl {
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
@@ -1194,6 +1260,10 @@ video {
 
 .border {
   border-width: 1px;
+}
+
+.border-4 {
+  border-width: 4px;
 }
 
 .border-b-2 {
@@ -1215,6 +1285,11 @@ video {
   border-color: rgb(26 61 100 / var(--tw-border-opacity));
 }
 
+.border-secondary {
+  --tw-border-opacity: 1;
+  border-color: rgb(12 43 78 / var(--tw-border-opacity));
+}
+
 .bg-\[\#57BA76\] {
   --tw-bg-opacity: 1;
   background-color: rgb(87 186 118 / var(--tw-bg-opacity));
@@ -1223,6 +1298,11 @@ video {
 .bg-\[\#986BD0\] {
   --tw-bg-opacity: 1;
   background-color: rgb(152 107 208 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#D97252\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(217 114 82 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#DF447B\] {
@@ -1270,6 +1350,10 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-gradient-to-br {
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+}
+
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
@@ -1294,6 +1378,10 @@ video {
   --tw-gradient-to: #1d546c var(--tw-gradient-to-position);
 }
 
+.to-secondary {
+  --tw-gradient-to: #0c2b4e var(--tw-gradient-to-position);
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -1309,6 +1397,10 @@ video {
 
 .p-3 {
   padding: 0.75rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .p-5 {
@@ -1365,6 +1457,11 @@ video {
 .px-\[22px\] {
   padding-left: 22px;
   padding-right: 22px;
+}
+
+.px-\[37px\] {
+  padding-left: 37px;
+  padding-right: 37px;
 }
 
 .px-\[70px\] {
@@ -1427,11 +1524,6 @@ video {
   padding-bottom: 9px;
 }
 
-.px-\[37px\] {
-  padding-left: 37px;
-  padding-right: 37px;
-}
-
 .pb-0 {
   padding-bottom: 0px;
 }
@@ -1442,6 +1534,10 @@ video {
 
 .pb-\[52px\] {
   padding-bottom: 52px;
+}
+
+.pl-20 {
+  padding-left: 5rem;
 }
 
 .pt-9 {
@@ -1525,6 +1621,11 @@ video {
 .text-\[\#c0392b\] {
   --tw-text-opacity: 1;
   color: rgb(192 57 43 / var(--tw-text-opacity));
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-gray-600 {
@@ -1679,12 +1780,12 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
 
